########## Project ##########
[project]
name = "plotnine"
description = "A Grammar of Graphics for Python"
license = {file = "LICENSE"}
authors = [
  {name = "Hassan Kibirige", email = "has2k1@gmail.com"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "matplotlib>=3.6.0",
    "mizani>=0.9.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "patsy>=0.5.1",
    "scipy>=1.5.0",
    "statsmodels>=0.14.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
all = [
    "plotnine[extra]",
    "plotnine[doc]",
    "plotnine[lint]",
    "plotnine[test]",
    "plotnine[build]",
    "plotnine[dev]",
]

extra = [
    "adjustText",
    "geopandas",
    "scikit-learn",
    "scikit-misc>=0.2.0"
]

doc = [
    "jupyter",
    "nbsphinx",
    "numpydoc>=0.9.1",
    "sphinx>=6.1.0",
    # Use importlib.resources when min supported python >= 3.9.0
    "importlib_resources",
]

lint = [
    "black>=23.1.0",
    "ruff",
]

test = [
    "pytest-cov"
]

build = [
    "build",
    "wheel",
]

dev = [
    "twine",
    "plotnine[typing]",
]

typing = [
    "pyright",
    "ipython",
    "pandas-stubs",
]

[project.urls]
homepage = "https://plotnine.readthedocs.io/en/stable"
repository = "https://github.com/has2k1/plotnine"
changelog = "https://plotnine.readthedocs.io/en/stable/changelog.html"
ci = "https://github.com/has2k1/plotnine/actions"

########## Build System ##########
# Reference https://github.com/pydata/xarray/blob/main/pyproject.toml
[build-system]
requires = [
    "setuptools>=59",
    "setuptools_scm[toml]>=6.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

########## Tool - Setuptools ##########
# If you only specify the top-level package (=plotnine) setuptools complains
# about not listing the sub-packages. Since we want every sub-package in the
# plotnine package, it is easier to use find directive.
[tool.setuptools.packages.find]
include = ["plotnine*"]

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = 'post-release'

########## Tool - Pytest ##########
[tool.pytest.ini_options]
testpaths = [
    "tests"
]
doctest_optionflags = "ALLOW_BYTES NORMALIZE_WHITESPACE"
addopts = "--pyargs --cov=plotnine --cov-report=xml --import-mode=importlib"

########## Tool - Coverage ##########
# Coverage.py
[tool.coverage.run]
branch = true
source = ["plotnine"]
include = [
    "plotnine/*"
]
omit = [
    "tests/*",
]

disable_warnings = ["include-ignored"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^def test_",
    "if __name__ == .__main__.:",
    "raise NotImplementedError('Not Implemented')",
    "if typing.TYPE_CHECKING:",
    "except ImportError:",
    "except PackageNotFoundError:",
]
precision = 1


########## Tool - Pyright ##########
[tool.pyright]
# Paths of directories or files that should be included. If no paths
# are specified, pyright defaults to the directory that contains the
# config file. Paths may contain wildcard characters ** (a directory or
# multiple levels of directories), * (a sequence of zero or more
# characters), or ? (a single character). If no include paths are
# specified, the root path for the workspace is assumed.
include = [
    "plotnine/"
]

# Paths of directories or files whose diagnostic output (errors and
# warnings) should be suppressed even if they are an included file or
# within the transitive closure of an included file. Paths may contain
# wildcard characters ** (a directory or multiple levels of
# directories), * (a sequence of zero or more characters), or ? (a
# single character).
ignore = []

# Set of identifiers that should be assumed to contain a constant
# value wherever used within this program. For example, { "DEBUG": true
# } indicates that pyright should assume that the identifier DEBUG will
# always be equal to True. If this identifier is used within a
# conditional expression (such as if not DEBUG:) pyright will use the
# indicated value to determine whether the guarded block is reachable
# or not. Member expressions that reference one of these constants
# (e.g. my_module.DEBUG) are also supported.
defineConstant = { DEBUG = true }

# typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportUnnecessaryTypeIgnoreComment = true
reportUnsupportedDunderAll = false


# Specifies a list of execution environments (see below). Execution
# environments are searched from start to finish by comparing the path
# of a source file with the root path specified in the execution
# environment.
executionEnvironments = []

stubPath = ""

########## Tool - Ruff ##########
[tool.ruff]
line-length = 79
select = ["E", "F", "C"]
ignore = [
    "E741",  # Ambiguous l
    "E743",  # Ambiguous I
    "C901",  # Too complex
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    "plotnine/themes/seaborn_rcmod.py",
    "**/__pycache__",
    "node_modules"
]


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"plotnine/__init__.py" = ["F401", "F403"]
"plotnine/typing.py" = ["F401"]


########## Tool - Black ##########
[tool.black]
line-length = 79
extend-exclude = '''
(
 seaborn_rcmod\.py
)
'''
