[metadata]
name = plotnine
description = A grammar of graphics for python
url = https://plotnine.readthedocs.io/en/stable
license = MIT
license_file = LICENSE
platforms = any
author = Hassan Kibirige
author_email = has2k1@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Matplotlib
    Topic :: Scientific/Engineering :: Visualization

project_urls =
    Documentation = https://plotnine.readthedocs.io/en/stable
    Source = https://github.com/has2k1/plotnine
    Bug Tracker = https://github.com/has2k1/plotnine/issues
    CI = https://github.com/has2k1/plotnine/actions


[options]
packages = find:
install_requires =
    matplotlib>=3.5.0
    mizani>=0.7.3
    numpy>=1.19.0
    pandas>=1.3.5
    patsy>=0.5.1
    scipy>=1.5.0
    statsmodels>=0.13.2
python_requires = >=3.8
zip_safe = False

[options.extras_require]
all =
    plotnine[extra]
    plotnine[test]
    plotnine[doc]
    plotnine[dev]

extra =
    adjustText
    scikit-misc
    scikit-learn
    geopandas

test =
    flake8
    pytest-cov

doc =
    jupyter
    nbsphinx
    numpydoc>=0.9.1
    sphinx>=3.0.0
    # Use importlib.resources when min supported python >= 3.9.0
    importlib_resources
    # Ref: https://github.com/sphinx-doc/sphinx/issues/10291
    jinja2<3.1

dev =
   twine
   wheel

[options.package_data]
plotnine.data = *.csv


[bdist_wheel]


[flake8]
# Add E741,E743 to the defaults in 3.5.0
ignore = E121,E123,E126,E226,E24,E704,W503,W504,E741,E743
exclude = plotnine/_version.py
